--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="row">
                 
                     <div class="col-md-5">
-                        <img class ="aboutImage" src="img/about.jpg">
+                        <img class ="aboutImage" src="img/about.JPG">
                     </div>
 
                     <div class ="col-md-7">
