--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </head>
     <body>
         
-</div>
+        <div class="loader">
+            <div class="inner"></div>
+        </div>
         
         <div id="slides">
 
