--- a/index.html
+++ b/index.html
@@ -99,17 +99,24 @@
                         <h4>My name is Joyce
                         </h4>
 
-                        <p> I am a Passionate and innovative Architect with a Masters Degree in Design and Construction offering over 5 
-                            years of experience through all development stages of architectural and interior design. I have experience 
+                       <p> I am a Passionate and innovative Architect with a Masters Degree in Design and Construction offering over 5 
+                            years of experience through all development stages of architectural and interior design.</p>
+                        <p>I have experience 
                             in design concepts, 3D modelling, rendering, civil construction drawings and specifications for a diverse 
-                            range of projects in the luxury market, residential and commercial portfolios. I have acquired advanced skills in 
-                            AutoCAD, Archicad, Sketchup, Lumion, Microsoft Office, Render and intermediate in BIM processes. </p>
+                            range of projects in the luxury market, residential and commercial portfolios.</p>
+                        <p> I have acquired advanced skills in 
+                            AutoCAD, Archicad, Sketchup, Lumion, Microsoft Office, Render and intermediate in BIM processes.</p>
+                        <p> I am
+                            currently looking for an exciting position in a challenging environment where I can develop my abilities 
+                            and that allows me to progress in my career. </p>
                         <h4>Highlights:</h4>
-                        <p>● Background in technical drawings including Autodesk, AutoCAD and Archicad <br>
+                        <p>● Background in technical drawings including Autodesk AutoCAD/Revit and Archicad <br>
                             ● Experience in Microsoft Office products <br>
                             ● Ability to work in a team and use own initiative<br>
                             ● Good communication and client relations skills<br>
                             ● High level of attention to detail<br>
+                            ● Ability to quickly learn new softwares and technologies<br>
+                            ● Modular Architecture experience</p>
                            
 
                     </div>
@@ -270,15 +277,13 @@
                             </div>
                             
                         </li>
-                        <li class="residential col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                       <li class="residential col-xs-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="img/portfolio/thumbnail/project21thumb.png" alt="">
+                                <img src="img/portfolio/thumbnail/new1thumb.jpg" alt="">
                             </div>
 
                             <div class="icons">
-                                <a href="img/portfolio/project21.jpg" title="View Image" class="openButton" data-fancybox data-caption="PROJECT 2 | COMMERCIAL | 
-                                JOYCE REIS | 
-                                VITORIA - ES, BRAZIL
+                                <a href="img/portfolio/new1.jpeg" title="View Image" class="openButton" data-fancybox data-caption="PROJECT 2 | RESIDENCIAL | JOYCE REIS | SÃO PAULO - SP, BRAZIL
                                 ">
                                     <i class="fa fa-search"></i>
                                 </a>
@@ -290,18 +295,15 @@
                         </li>
                         <li class="residential col-xs-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
-                                <img src="img/portfolio/thumbnail/project23thumb.png" alt="">
+                                <img src="img/portfolio/thumbnail/new2thumb.jpg" alt="">
                             </div>
 
                             <div class="icons">
-                                <a href="img/portfolio/project23.jpg" title="View Image" class="openButton" data-fancybox data-caption="PROJECT 2 | COMMERCIAL | 
-                                JOYCE REIS | 
-                                VITORIA - ES, BRAZIL">
+                                <a href="img/portfolio/new2.jpeg" title="View Image" class="openButton" data-fancybox data-caption="PROJECT 2 | RESIDENCIAL | JOYCE REIS | SÃO PAULO - SP, BRAZIL">
                                     <i class="fa fa-search"></i>
                                 </a>
 
                             </div>
-                        </li>
                         <li class="residential col-xs-6 col-sm-4 col-md-3 col-lg-3">
                             <div class="item">
                                 <img src="img/portfolio/thumbnail/project31thumb.jpg" alt="">
