--- a/index.html
+++ b/index.html
@@ -99,24 +99,16 @@
                         <h4>My name is Joyce
                         </h4>
 
-                       <p> I am a Passionate and innovative Architect with a Masters Degree in Design and Construction offering over 5 
-                            years of experience through all development stages of architectural and interior design.</p>
-                        <p>I have experience 
-                            in design concepts, 3D modelling, rendering, civil construction drawings and specifications for a diverse 
-                            range of projects in the luxury market, residential and commercial portfolios.</p>
-                        <p> I have acquired advanced skills in 
-                            AutoCAD, Archicad, Sketchup, Lumion, Microsoft Office, Render and intermediate in BIM processes.</p>
-                        <p> I am
-                            currently looking for an exciting position in a challenging environment where I can develop my abilities 
-                            and that allows me to progress in my career. </p>
+                       <p> I am a passionate and innovative Architect offering over five years of experience through all architectural and interior design development stages.</p><p> Experience in designing architecture and interiors, 3D modelling, rendering, architectural designs 2D, and architectural plans for a diverse range of projects in the luxury market, residential and commercial portfolios.</p> <p> Skills in AutoCAD, Revit, ArchiCAD, Trimble Sketchup, Lumion, 3Ds Max, V-ray, Microsoft Office, Adobe Photoshop, Adobe Illustrator and BIM processes. </p>
                         <h4>Highlights:</h4>
-                        <p>● Background in technical drawings including Autodesk AutoCAD/Revit and Archicad <br>
-                            ● Experience in Microsoft Office products <br>
-                            ● Ability to work in a team and use own initiative<br>
-                            ● Good communication and client relations skills<br>
-                            ● High level of attention to detail<br>
-                            ● Ability to quickly learn new softwares and technologies<br>
-                            ● Modular Architecture experience</p>
+                        <p>- Background in technical drawings including Autodesk AutoCAD/Revit and Archicad <br>
+- Experience in Microsoft Office products <br>
+- Ability to work in a team and use own initiative<br>
+- Good communication and client relations skills <br>
+- High level of attention to detail <br>
+- Ability to quickly learn new software and technologies <br>
+- Experience in Modular Construction <br>
+- Adobe Illustrator and Adobe Photoshop skills <br>
                            
 
                     </div>
